fix: concurrent modification exception